{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 46,
  "lineage": "da0dab3c-e8b4-1f23-f92e-3ef9b85c971b",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06cff85354b67982b",
            "arn": "arn:aws:ec2:eu-west-2:730096458670:instance/i-08410d67820ae1d37",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08410d67820ae1d37",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-047b4d9293df36b54",
            "private_dns": "ip-172-31-5-188.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.5.188",
            "public_ip": "18.175.135.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09f4adb5ddbc8571a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b2d97773d8d4eeb",
            "tags": {
              "Name": "WebServer"
            },
            "tags_all": {
              "Name": "WebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-035f565f588a93f69"
            ]
          },
          "dependencies": [
            "module.key_pair.aws_key_pair.my-key-pair",
            "module.key_pair.tls_private_key.private_key_pair",
            "module.security_group.aws_security_group.my-security-group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:730096458670:loadbalancer/app/main-load-balancer/4fdc6b11845977c2",
            "arn_suffix": "app/main-load-balancer/4fdc6b11845977c2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-load-balancer-1263481566.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:730096458670:loadbalancer/app/main-load-balancer/4fdc6b11845977c2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-035f565f588a93f69"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03ac9b93e20e22bf5"
              },
              {
                "subnet_id": "subnet-03b2d97773d8d4eeb"
              }
            ],
            "subnets": [
              "subnet-03ac9b93e20e22bf5",
              "subnet-03b2d97773d8d4eeb"
            ],
            "tags": {
              "Name": "MainLoadBalancer"
            },
            "tags_all": {
              "Name": "MainLoadBalancer"
            },
            "vpc_id": "vpc-058f7f97b2a8d1dcf",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security_group.aws_security_group.my-security-group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:730096458670:security-group/sg-035f565f588a93f69",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035f565f588a93f69",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250318173035130000000001",
            "name_prefix": "terraform-",
            "owner_id": "730096458670",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MainSecurityGroup"
            },
            "tags_all": {
              "Name": "MainSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-058f7f97b2a8d1dcf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:730096458670:internet-gateway/igw-05e99ad637959d08d",
            "id": "igw-05e99ad637959d08d",
            "owner_id": "730096458670",
            "tags": {
              "Name": "InternetGateway"
            },
            "tags_all": {
              "Name": "InternetGateway"
            },
            "vpc_id": "vpc-058f7f97b2a8d1dcf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:730096458670:route-table/rtb-0bcf78432668d6f3a",
            "id": "rtb-0bcf78432668d6f3a",
            "owner_id": "730096458670",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e99ad637959d08d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-058f7f97b2a8d1dcf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adc4d66f9868921d",
            "route_table_id": "rtb-0bcf78432668d6f3a",
            "subnet_id": "subnet-03b2d97773d8d4eeb"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099d3a09df16073e4",
            "route_table_id": "rtb-0bcf78432668d6f3a",
            "subnet_id": "subnet-03ac9b93e20e22bf5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:730096458670:subnet/subnet-088a13bb1b90fb3bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.15.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088a13bb1b90fb3bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730096458670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-058f7f97b2a8d1dcf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:730096458670:subnet/subnet-02005fbfcf3cf4aad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02005fbfcf3cf4aad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730096458670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-058f7f97b2a8d1dcf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:730096458670:subnet/subnet-03b2d97773d8d4eeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b2d97773d8d4eeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730096458670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-058f7f97b2a8d1dcf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:730096458670:subnet/subnet-03ac9b93e20e22bf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ac9b93e20e22bf5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730096458670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-058f7f97b2a8d1dcf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:730096458670:vpc/vpc-058f7f97b2a8d1dcf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00c20231d0c2bf552",
            "default_route_table_id": "rtb-0644f6dd152af0d11",
            "default_security_group_id": "sg-06619b2c7155c9183",
            "dhcp_options_id": "dopt-009e581b88d64a9ea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058f7f97b2a8d1dcf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0644f6dd152af0d11",
            "owner_id": "730096458670"
          }
        }
      ]
    }
  ]
}